set up github pages

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -32,7 +32,7 @@
   <div class="login-panel">
     <div class="login-card" @fadeInUp>
       <div class="login-logo-placeholder">
-        <img src="/assets/BHE-LOGO.png" alt="Bataan Heroes College Logo" />
+        <img src="assets/BHE-LOGO.png" alt="Bataan Heroes College Logo" />
       </div>
       <div class="login-title">Bataan Heroes College<br>Student Login</div>
       <form (submit)="onLogin($event)" novalidate>
