--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -7,36 +7,27 @@
       </div>
       <div class="sidebar-name">BATAAN HEROES COLLEGE</div>
     </div>
+
     <nav class="sidebar-nav">
+      <!-- Dashboard -->
       <div class="nav-group">
-        <a class="sidebar-link" (click)="toggleDashboardMenu()">
+        <a class="sidebar-link" routerLink="/admin-dashboard" (click)="onDashboardClick()">
           <div class="nav-item">
             <app-icon name="dashboard" [size]="20" color="#FFFFFF"></app-icon>
             <span>Dashboard</span>
-            <app-icon [name]="'arrow-left'" class="submenu-arrow" [size]="16" [style.transform]="showDashboardMenu ? 'rotate(-90deg)' : ''" color="#FFFFFF"></app-icon>
           </div>
         </a>
-        <div class="submenu" [class.show]="showDashboardMenu">
-          <a class="sidebar-sublink" routerLink="/admin-dashboard/overview" (click)="closeSidebar()">
-            <app-icon name="dashboard" [size]="16" color="#FFFFFF"></app-icon>
-            <span>Overview</span>
-          </a>
-          <a class="sidebar-sublink" routerLink="/admin-dashboard/settings" (click)="closeSidebar()">
-            <app-icon name="dashboard" [size]="16" color="#FFFFFF"></app-icon>
-            <span>Academic Year Settings</span>
-          </a>
-          <a class="sidebar-sublink" routerLink="/admin-dashboard/audit" (click)="closeSidebar()">
-            <app-icon name="user-pen" [size]="16" color="#FFFFFF"></app-icon>
-            <span>Audit Trail</span>
-          </a>
-        </div>
       </div>
+
+      <!-- Management -->
       <div class="nav-group">
-        <a class="sidebar-link" (click)="toggleFacultyMenu()">
+        <a class="sidebar-link" (click)="toggleMenu('faculty')">
           <div class="nav-item">
             <app-icon name="personnel" [size]="20" color="#FFFFFF"></app-icon>
             <span>Management</span>
-            <app-icon [name]="'arrow-left'" class="submenu-arrow" [size]="16" [style.transform]="showFacultyMenu ? 'rotate(-90deg)' : ''" color="#FFFFFF"></app-icon>
+            <app-icon name="arrow-left" class="submenu-arrow" [size]="16"
+                      [style.transform]="showFacultyMenu ? 'rotate(-90deg)' : ''" color="#FFFFFF">
+            </app-icon>
           </div>
         </a>
         <div class="submenu" [class.show]="showFacultyMenu">
@@ -58,83 +49,31 @@
           </a>
         </div>
       </div>
-      <a class="sidebar-link logout-link" (click)="logout()">
-        <div class="nav-item">
-          <app-icon name="log-out" [size]="20" color="#FFFFFF"></app-icon>
-          <span>Logout</span>
-        </div>
-      </a>
-    </nav>
-  </aside>
 
-<!-- Mobile Sidebar Wrapper -->
-<div *ngIf="isMobile()">
-  <!-- Overlay -->
-  <div class="sidebar-overlay" *ngIf="sidebarOpen" (click)="closeSidebar()"></div>
-
-  <!-- Sidebar Drawer -->
-  <aside
-    class="sidebar-drawer"
-    [class.open]="sidebarOpen"
-    (click)="$event.stopPropagation()"
-  >
-    <div class="sidebar-profile">
-      <div class="sidebar-avatar">
-        <img src="assets/BHE-LOGO.png" alt="BHC Logo" class="school-logo" />
-      </div>
-      <div class="sidebar-name">BATAAN HEROES COLLEGE</div>
-    </div>
-    <nav class="sidebar-nav">
+      <!-- Academic Settings -->
       <div class="nav-group">
-        <a class="sidebar-link" (click)="toggleDashboardMenu()">
+        <a class="sidebar-link" (click)="toggleMenu('academic')">
           <div class="nav-item">
-            <app-icon name="dashboard" [size]="20" color="#FFFFFF"></app-icon>
-            <span>Dashboard</span>
-            <app-icon [name]="'arrow-left'" class="submenu-arrow" [size]="16" [style.transform]="showDashboardMenu ? 'rotate(-90deg)' : ''" color="#FFFFFF"></app-icon>
+            <app-icon name="settings" [size]="20" color="#FFFFFF"></app-icon>
+            <span>Academic Settings</span>
+            <app-icon name="arrow-left" class="submenu-arrow" [size]="16"
+                      [style.transform]="showAcademicSettingsMenu ? 'rotate(-90deg)' : ''" color="#FFFFFF">
+            </app-icon>
           </div>
         </a>
-        <div class="submenu" [class.show]="showDashboardMenu">
-          <a class="sidebar-sublink" routerLink="/admin-dashboard/overview" (click)="closeSidebar()">
-            <app-icon name="dashboard" [size]="16" color="#FFFFFF"></app-icon>
-            <span>Overview</span>
-          </a>
+        <div class="submenu" [class.show]="showAcademicSettingsMenu">
           <a class="sidebar-sublink" routerLink="/admin-dashboard/settings" (click)="closeSidebar()">
-            <app-icon name="dashboard" [size]="16" color="#FFFFFF"></app-icon>
+            <app-icon name="settings" [size]="16" color="#FFFFFF"></app-icon>
             <span>Academic Year Settings</span>
           </a>
           <a class="sidebar-sublink" routerLink="/admin-dashboard/audit" (click)="closeSidebar()">
-            <app-icon name="user-pen" [size]="16" color="#FFFFFF"></app-icon>
+            <app-icon name="personnel" [size]="16" color="#FFFFFF"></app-icon>
             <span>Audit Trail</span>
           </a>
         </div>
       </div>
-      <div class="nav-group">
-        <a class="sidebar-link" (click)="toggleFacultyMenu()">
-          <div class="nav-item">
-            <app-icon name="personnel" [size]="20" color="#FFFFFF"></app-icon>
-            <span>Management</span>
-            <app-icon [name]="'arrow-left'" class="submenu-arrow" [size]="16" [style.transform]="showFacultyMenu ? 'rotate(-90deg)' : ''" color="#FFFFFF"></app-icon>
-          </div>
-        </a>
-        <div class="submenu" [class.show]="showFacultyMenu">
-          <a class="sidebar-sublink" (click)="navigateToManagementSub('faculty')">
-            <app-icon name="user-pen" [size]="16" color="#FFFFFF"></app-icon>
-            <span>Faculty Management</span>
-          </a>
-          <a class="sidebar-sublink" (click)="navigateToManagementSub('students')">
-            <app-icon name="user-pen" [size]="16" color="#FFFFFF"></app-icon>
-            <span>Student Management</span>
-          </a>
-          <a class="sidebar-sublink" (click)="navigateToManagementSub('classlist-management')">
-            <app-icon name="classes" [size]="16" color="#FFFFFF"></app-icon>
-            <span>Class List Management</span>
-          </a>
-          <a class="sidebar-sublink" (click)="navigateToManagementSub('faculty-evalscore')">
-            <app-icon name="dashboard" [size]="16" color="#FFFFFF"></app-icon>
-            <span>Faculty Evaluation</span>
-          </a>
-        </div>
-      </div>
+
+      <!-- Logout -->
       <a class="sidebar-link logout-link" (click)="logout()">
         <div class="nav-item">
           <app-icon name="log-out" [size]="20" color="#FFFFFF"></app-icon>
@@ -143,5 +82,90 @@
       </a>
     </nav>
   </aside>
+
+  <!-- Mobile Sidebar Wrapper -->
+  <div *ngIf="isMobile()">
+    <!-- Overlay -->
+    <div class="sidebar-overlay" *ngIf="sidebarOpen" (click)="closeSidebar()"></div>
+
+    <!-- Sidebar Drawer -->
+    <aside class="sidebar-drawer" [class.open]="sidebarOpen" (click)="$event.stopPropagation()">
+      <div class="sidebar-profile">
+        <div class="sidebar-avatar">
+          <img src="assets/BHE-LOGO.png" alt="BHC Logo" class="school-logo" />
+        </div>
+        <div class="sidebar-name">BATAAN HEROES COLLEGE</div>
+      </div>
+
+      <nav class="sidebar-nav">
+        <div class="nav-group">
+          <a class="sidebar-link" routerLink="/admin-dashboard" (click)="onDashboardClick()">
+            <div class="nav-item">
+              <app-icon name="dashboard" [size]="20" color="#FFFFFF"></app-icon>
+              <span>Dashboard</span>
+            </div>
+          </a>
+        </div>
+
+        <div class="nav-group">
+          <a class="sidebar-link" (click)="toggleMenu('faculty')">
+            <div class="nav-item">
+              <app-icon name="personnel" [size]="20" color="#FFFFFF"></app-icon>
+              <span>Management</span>
+              <app-icon name="arrow-left" class="submenu-arrow" [size]="16"
+                        [style.transform]="showFacultyMenu ? 'rotate(-90deg)' : ''" color="#FFFFFF">
+              </app-icon>
+            </div>
+          </a>
+          <div class="submenu" [class.show]="showFacultyMenu">
+            <a class="sidebar-sublink" (click)="navigateToManagementSub('faculty')">
+              <app-icon name="user-pen" [size]="16" color="#FFFFFF"></app-icon>
+              <span>Faculty Management</span>
+            </a>
+            <a class="sidebar-sublink" (click)="navigateToManagementSub('students')">
+              <app-icon name="user-pen" [size]="16" color="#FFFFFF"></app-icon>
+              <span>Student Management</span>
+            </a>
+            <a class="sidebar-sublink" (click)="navigateToManagementSub('classlist-management')">
+              <app-icon name="classes" [size]="16" color="#FFFFFF"></app-icon>
+              <span>Class List Management</span>
+            </a>
+            <a class="sidebar-sublink" (click)="navigateToManagementSub('faculty-evalscore')">
+              <app-icon name="dashboard" [size]="16" color="#FFFFFF"></app-icon>
+              <span>Faculty Evaluation</span>
+            </a>
+          </div>
+        </div>
+
+        <div class="nav-group">
+          <a class="sidebar-link" (click)="toggleMenu('academic')">
+            <div class="nav-item">
+              <app-icon name="settings" [size]="20" color="#FFFFFF"></app-icon>
+              <span>Academic Settings</span>
+              <app-icon name="arrow-left" class="submenu-arrow" [size]="16"
+                        [style.transform]="showAcademicSettingsMenu ? 'rotate(-90deg)' : ''" color="#FFFFFF">
+              </app-icon>
+            </div>
+          </a>
+          <div class="submenu" [class.show]="showAcademicSettingsMenu">
+            <a class="sidebar-sublink" routerLink="/admin-dashboard/settings" (click)="closeSidebar()">
+              <app-icon name="settings" [size]="16" color="#FFFFFF"></app-icon>
+              <span>Academic Year Settings</span>
+            </a>
+            <a class="sidebar-sublink" routerLink="/admin-dashboard/audit" (click)="closeSidebar()">
+              <app-icon name="personnel" [size]="16" color="#FFFFFF"></app-icon>
+              <span>Audit Trail</span>
+            </a>
+          </div>
+        </div>
+
+        <a class="sidebar-link logout-link" (click)="logout()">
+          <div class="nav-item">
+            <app-icon name="log-out" [size]="20" color="#FFFFFF"></app-icon>
+            <span>Logout</span>
+          </div>
+        </a>
+      </nav>
+    </aside>
+  </div>
 </div>
-
